--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,12 +12,27 @@
   font-style: normal;
 }
 
+
+
 @theme {
   --font-pjs: "Plus Jakarta Sans", sans-serif; 
 
   --color-primary: #FFFFFF;
   --color-secondary: #242424;
   --color-accent: #E52323;
+
+  --tracking-hero: -0.018em;
+
+    --animate-sidebounce: sidebounce 1s ease-in-out infinite;  
+
+    @keyframes sidebounce {    
+      0%,    100% {      
+        transform: translateY(0);    
+      }    
+      50% {      
+        transform: translateY(-10px);    
+      }  
+    }
 }
 
 @layer base {
