--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,119 +2,163 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from "../components/Button.astro";
 import Link from "../components/Link.astro";
-import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
 import P from "../components/P.astro";
+import Arrow from "../../public/arrow.svg";
+import FadeInSection from "../components/FadeInSection.jsx";
 ---
 
 <MainLayout title="Titel">
-  <section class="font-pjs">
-    <article id="hero" class="bg-accent text-primary pt-60 pb-20">
-      <aside class="mb-30">
-        <div class="font-bold text-7xl text-center">
-          <h1>CHRISTIAN</h1>
-          <h1 class="-mt-4">DITLEVSEN</h1>
+  <section class="font-pjs overflow-hidden">
+    <article id="hero" class="bg-accent text-primary pt-60 pb-20 md:p-20 md:pb-10 md:grid md:grid-cols-12">
+      <aside class="mb-30 md:mb-20">
+        <div class="font-bold text-7xl text-center md:text-[12vw] md:text-left md:col-start-1 md:col-span-9 animate-fade-down">
+          <h1 class="hover:italic">CHRISTIAN</h1>
+          <h1 class="-mt-4 md:-mt-[3.1vw] md:tracking-hero hover:italic md:pl-[9.3vw]">DITLEVSEN</h1>
         </div>
-        <p class="text-center text-4xl">multimediadesigner</p>
+        <p class="text-center text-4xl md:text-[6vw] md:mt-5 animate-fade-down animate-delay-200">multimediadesigner</p>
       </aside>
 
-      <aside class="text-center w-40 m-auto flex flex-col gap-10">
-        <p class="text-[16px]">there's a cool guy down here</p>
-        <div class="animate-bounce"><p>arrow</p></div>
+      <aside class="text-center w-40 m-auto flex flex-col gap-10 md:col-start-10 md:col-span-3 md:row-start-2 animate-fade-up animate-delay-600">
+        <p class="text-[16px] md:text-[18px] animate-fade">there's a cool guy down here</p>
+        <div class="animate-bounce m-auto"><Arrow width={40} /></div>
       </aside>
     </article>
 
-    <article id="about" class="bg-secondary text-primary p-5 pt-10 pb-20">
-      <aside id="me" class="mb-10">
-        <div class="bg-amber-300 w-90 h-90 m-auto -rotate-1"><p>image of me</p></div>
-        <div class="mt-10 text-[20px] flex flex-col gap-10">
-          <p>I'm 21, music nerd, fashion enthusiast and I like making cool stuff for screens.</p>
-          <p>A structured and efficient designer with a <span class="font-semibold">love</span> for small details, focused on UX, interaction and prototyping.</p>
-          <p>Currently studying MMD at EK in Copenhagen, looking for internship for my 4th semester.</p>
+    <article id="about" class="bg-secondary text-primary p-5 pt-10 pb-20 lg:p-10 lg:pt-30">
+      <aside id="me" class="mb-20 lg:grid lg:grid-cols-12 lg:mb-40">
+        <div class="w-90 h-90 m-auto -rotate-1 lg:col-start-8 lg:col-span-5 lg:row-start-1 lg:w-[35vw] lg:h-auto"><img src="/christian.jpg" alt="picture of me" /></div>
+        <div class="mt-10 text-[20px] flex flex-col gap-10 lg:col-start-1 lg:col-span-7 lg:row-start-1 lg:text-[2vw] lg:justify-between">
+          <FadeInSection client:load><p>I'm 21, music nerd, fashion enthusiast and I like making cool stuff for screens.</p></FadeInSection>
+          <FadeInSection client:load><p>A structured and efficient designer with a <span class="font-bold">love</span> for small details, focused on UX, interaction and prototyping.</p></FadeInSection>
+          <FadeInSection client:load><p>Currently studying MMD at EK in Copenhagen, looking for internship for my 4th semester.</p></FadeInSection>
         </div>
       </aside>
-      <aside id="myskills" class="mt-10">
-        <h2 class="text-center font-bold text-[65px]">MY SKILLS</h2>
-        <div id="skillcontainer" class="flex flex-col gap-15 text-center mt-10">
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[35px] font-semibold">UX</h3>
+
+      <aside id="myskills" class="mt-20 lg:mb-20">
+        <h2 class="text-center font-bold text-[65px] lg:text-[100px]">MY SKILLS</h2>
+        <div id="skillcontainer" class="flex flex-col gap-15 text-center mt-10 lg:grid lg:grid-cols-2 lg:grid-rows-3">
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-1 lg:row-start-1">
+                <div class="place-content-center w-7"><img src="/UX_icon.svg" alt="UX icon" /></div>
+                <h3 class="text-[35px] font-semibold">UX</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-112 lg:m-auto">
+                I always factor in the user experience with any design I work on, giving me the ability to ensure a quality experience for the user and understanding how to direct their attention.
+              </p>
             </div>
-            <p class="text-[16px]">I always factor in the user experience with any design I work on, giving me the ability to ensure a quality experience for the user and understanding how to direct their attention.</p>
-          </div>
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[35px] font-semibold">PROJECT LEAD</h3>
+          </FadeInSection>
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-2 lg:row-start-1">
+                <div class="place-content-center w-7"><img src="/PL_icon.svg" alt="Project lead icon" /></div>
+                <h3 class="text-[35px] font-semibold">PROJECT LEAD</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-115 lg:m-auto">
+                I enjoy getting work done in good time, and a big part of that is proper project management. I&#39;m often the one taking the initiative to create timelines and ensure everyone is aware of the tasks that need to be done.
+              </p>
             </div>
-            <p class="text-[16px]">
-              I enjoy getting work done in good time, and a big part of that is proper project management. I&#39;m often the one taking the initiative to create timelines and ensure everyone is aware of the tasks that need to be done.
-            </p>
-          </div>
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[35px] font-semibold">PROTOTYPING</h3>
+          </FadeInSection>
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-1 lg:row-start-2">
+                <div class="place-content-center w-7"><img src="/prototype_icon.svg" alt="prototype icon" /></div>
+                <h3 class="text-[35px] font-semibold">PROTOTYPING</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-120 lg:m-auto">I'm studying primarily web design, though I have much experience coding with Astro, TailwindCSS and AlpineJS which enables me to prototype a wide range of designs.</p>
             </div>
-            <p class="text-[16px]">I'm studying primarily web design, though I have much experience coding with Astro, TailwindCSS and AlpineJS which enables me to prototype a wide range of designs.</p>
-          </div>
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[35px] font-semibold">FIGMA</h3>
+          </FadeInSection>
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-2 lg:row-start-2">
+                <div class="place-content-center w-7"><img src="/figma_icon.svg" alt="figma icon" /></div>
+                <h3 class="text-[35px] font-semibold">FIGMA</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-112 lg:m-auto">I&#39;ve spent many hours learning and designing in Figma, allowing me to make intricate prototypes to test and iterate on, aswell as providing a visual reference when coding.</p>
             </div>
-            <p class="text-[16px]">I&#39;ve spent many hours learning and designing in Figma, allowing me to make intricate prototypes to test and iterate on, aswell as providing a visual reference when coding.</p>
-          </div>
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[30px] font-semibold">INTERACTIVE DESIGN</h3>
+          </FadeInSection>
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-1 lg:row-start-3">
+                <div class="place-content-center w-7"><img src="/interact_icon.svg" alt="interactive design icon" /></div>
+                <h3 class="text-[30px] font-semibold">INTERACTIVE DESIGN</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-120 lg:m-auto">Interactions are fundamental to my design, as they serve to guide the user&#39;s journey through a website, aswell as making the design more effective and engaging.</p>
+              <p class="text-[16px] lg:text-[18px] lg:w-120 lg:m-auto">Also, animations are fun!</p>
             </div>
-            <p class="text-[16px]">Interactions are fundamental to my design, as they serve to guide the user&#39;s journey through a website, aswell as making the design more effective and engaging. Also, animations are fun!</p>
-          </div>
-          <div>
-            <div class="flex flex-row place-content-center gap-2">
-              <div><p>icon</p></div>
-              <h3 class="text-[35px] font-semibold">PHOTOGRAPHY</h3>
+          </FadeInSection>
+          <FadeInSection client:load>
+            <div>
+              <div class="flex flex-row place-content-center gap-2 lg:col-start-2 lg:row-start-3">
+                <div class="place-content-center w-7"><img src="/photo_icon.svg" alt="photography icon" /></div>
+                <h3 class="text-[35px] font-semibold">PHOTOGRAPHY</h3>
+              </div>
+              <p class="text-[16px] lg:text-[18px] lg:w-120 lg:m-auto">
+                I&#39;ve always had a passion for photography, and though it&#39;s just a hobby, the experience with editing and art directing images, aswell as understanding composition, has translated well to my skills as a Designer.
+              </p>
             </div>
-            <p class="text-[16px]">
-              I&#39;ve always had a passion for photography, and though it&#39;s just a hobby, the experience with editing and art directing images, aswell as understanding composition, has translated well to my skills as a Designer.
-            </p>
-          </div>
-        </div>
-      </aside>
-    </article>
-    <article id="projects" class="bg-accent text-primary p-5 pt-10 pb-10">
-      <h2 class="text-center font-bold text-[65px] leading-18">SOME PROJECTS</h2>
-      <aside class="flex flex-col gap-10 mt-10">
-        <div>
-          <p class="font-semibold text-[30px] text-center underline">UX redesign for jeweler</p>
-          <div>arrow</div>
-          <div>image wrapper</div>
-        </div>
-        <div>
-          <p class="font-semibold text-[30px] text-center underline">Design for event</p>
-          <div>arrow</div>
-          <div>image wrapper</div>
-        </div>
-        <div>
-          <p class="font-semibold text-[30px] text-center underline">Campaign site for brand</p>
-          <div>arrow</div>
-          <div>image wrapper</div>
+          </FadeInSection>
         </div>
       </aside>
     </article>
-    <article id="contact" class="bg-secondary p-5 pt-10 pb-10 text-primary">
-      <aside class="text-center">
-        <h2 class="font-bold text-[65px]">FRIEND?</h2>
-        <h3 class="font-semibold text-[30px] -mt-4">where you can find me</h3>
+
+    <article id="projects" class="bg-accent text-primary p-5 pt-10 pb-10 lg:pt-20 lg:pb-50">
+      <h2 class="text-center font-bold text-[65px] leading-18 lg:text-left lg:text-[100px]">SOME PROJECTS</h2>
+      <aside class="flex flex-col gap-10 mt-10 lg:grid lg:grid-cols-1 lg:grid-rows-3 lg:gap-y-20 lg:mt-30">
+        <div id="project1" x-data="{ open: false }" class="group hover:cursor-pointer lg:col-start-1 lg:row-start-1 lg:m-auto lg:ml-20 lg:flex lg:flex-row lg:justify-between lg:w-full lg:h-15">
+          <div>
+            <div @mouseenter="open = true" @mouseleave="open = false" @click="open = !open" class="lg:flex lg:flex-row lg:gap-0 lg:justify-start lg:w-[500px]">
+              <div class="m-auto ml-0 mr-0 w-7 h-7 hidden lg:block rotate-270 group-hover:animate-sidebounce"><img src="/arrow.svg" alt="arrow" /></div>
+              <p class="font-semibold text-[30px] text-center max-lg:underline mb-2 lg:m-0 lg:text-left lg:text-[40px]">UX redesign for jeweler</p>
+            </div>
+            <div class="m-auto w-7 h-7 lg:hidden"><img src="/arrow.svg" alt="arrow" /></div>
+            <div x-show="open" x-transition class="w-[90vw] h-auto m-auto mt-4 rotate-1 lg:hidden"><img src="/jewel.gif" alt="jeweler project" /></div>
+          </div>
+          <div x-show="open" x-transition class="hidden m-auto lg:block lg:col-start-2 place-content-center w-[35vw] h-auto rotate-1"><img src="/jewel.gif" alt="jeweler project" /></div>
+        </div>
+
+        <div id="project2" x-data="{ open: false }" class="group hover:cursor-pointer lg:col-start-1 lg:row-start-2 lg:m-auto lg:ml-20 lg:flex lg:flex-row lg:justify-between lg:w-full lg:h-15">
+          <div>
+            <div @mouseenter="open = true" @mouseleave="open = false" @click="open = !open" class="lg:flex lg:flex-row lg:gap-0 lg:justify-start lg:w-[500px]">
+              <div class="m-auto ml-0 mr-0 w-7 h-7 hidden lg:block rotate-270 group-hover:animate-sidebounce"><img src="/arrow.svg" alt="arrow" /></div>
+              <p class="font-semibold text-[30px] text-center max-lg:underline mb-2 lg:text-[40px] lg:m-0 lg:text-left">Design for event</p>
+            </div>
+            <div class="m-auto w-7 h-7 lg:hidden"><img src="/arrow.svg" alt="arrow" /></div>
+            <div x-show="open" x-transition class="w-[90vw] h-auto m-auto mt-4 -rotate-1 lg:hidden"><img src="/instantday.gif" alt="event project" /></div>
+          </div>
+          <div x-show="open" x-transition class="hidden m-auto -mt-25 lg:block lg:col-start-2 place-content-center w-[35vw] h-auto -rotate-1"><img src="/instantday.gif" alt="event project" /></div>
+        </div>
+
+        <div id="project3" x-data="{ open: false }" class="group hover:cursor-pointer lg:col-start-1 lg:row-start-3 lg:m-auto lg:ml-20 lg:flex lg:flex-row lg:justify-between lg:w-full lg:h-15">
+          <div>
+            <div @mouseenter="open = true" @mouseleave="open = false" @click="open = !open" class="lg:flex lg:flex-row lg:gap-0 lg:justify-start lg:w-[500px]">
+              <div class="m-auto ml-0 mr-0 w-7 h-7 hidden lg:block rotate-270 group-hover:animate-sidebounce"><img src="/arrow.svg" alt="arrow" /></div>
+              <p class="font-semibold text-[30px] text-center max-lg:underline mb-2 lg:text-[40px] lg:m-0 lg:text-left">Campaign site for brand</p>
+            </div>
+            <div class="m-auto w-7 h-7 lg:hidden"><img src="/arrow.svg" alt="arrow" /></div>
+            <div x-show="open" x-transition class="w-[90vw] h-auto m-auto mt-4 rotate-1 lg:hidden"><img src="/pleasant.gif" alt="brand project" /></div>
+          </div>
+          <div x-show="open" x-transition class="hidden m-auto -mt-60 lg:block lg:col-start-2 place-content-center w-[35vw] h-auto rotate-1"><img src="/pleasant.gif" alt="brand project" /></div>
+        </div>
       </aside>
-      <div id="iconwrapper" class="m-auto mt-10 grid grid-cols-2 grid-rows-2">
-        <div class="col-start-1 row-start-1"><p>linkedin</p></div>
-        <div class="col-start-2 row-start-1"><p>facebook</p></div>
-        <div class="col-start-1 row-start-2"><p>instagram</p></div>
-        <div class="col-start-2 row-start-2"><p>email</p></div>
+    </article>
+
+    <article id="contact" class="bg-secondary p-5 pt-10 pb-20 text-primary lg:pt-20 lg:pb-40">
+      <aside class="text-center mb-15">
+        <h2 class="font-bold text-[65px] lg:text-[100px]">PRETTY COOL RIGHT?</h2>
+        <h3 class="font-semibold text-[30px] -mt-4 lg:[50]">where you can contact me</h3>
+      </aside>
+      <div id="iconwrapper" class="m-auto mt-10 grid grid-cols-2 grid-rows-2 gap-y-15 lg:flex lg:flex-row lg:justify-between lg:w-200 lg:mt-20">
+        <div class="col-start-1 row-start-1 m-auto w-15 h-15 cursor-pointer transition duration-100 ease-in-out hover:scale-110">
+          <a href="https://www.linkedin.com/in/christian-ditlevsen-670027387/" target="blank"><img src="/linkedinlogo.svg" alt="linkedin" /></a>
+        </div>
+        <div class="col-start-2 row-start-1 m-auto w-15 h-15 cursor-pointer transition duration-100 ease-in-out hover:scale-110">
+          <a href="https://www.facebook.com/profile.php?id=100010043790204" target="blank"><img src="facebooklogo.svg" alt="facebook" /></a>
+        </div>
+        <div class="col-start-1 row-start-2 m-auto w-15 h-15 cursor-pointer transition duration-100 ease-in-out hover:scale-110"><a href="https://www.instagram.com/kruzader_/" target="blank"><img src="instalogo.svg" alt="instagram" /></a></div>
+        <div class="col-start-2 row-start-2 m-auto w-15 h-15 cursor-pointer transition duration-100 ease-in-out hover:scale-110 place-content-center">
+          <a href="mailto:chdi0002@stud.ek.dk" target="blank"><img src="emaillogo.svg" alt="email" /></a>
+        </div>
       </div>
     </article>
   </section>
