--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Arrow from "../../public/arrow.svg";
 import FadeInSection from "../components/FadeInSection.jsx";
 ---
 
-<MainLayout title="Titel">
+<MainLayout title="Christian Ditlevsen">
   <section class="font-pjs overflow-hidden">
     <article id="hero" class="bg-accent text-primary pt-60 pb-20 md:p-20 md:pb-10 md:grid md:grid-cols-12">
       <aside class="mb-30 md:mb-20">
@@ -145,10 +145,10 @@ import FadeInSection from "../components/FadeInSection.jsx";
 
     <article id="contact" class="bg-secondary p-5 pt-10 pb-20 text-primary lg:pt-20 lg:pb-40">
       <aside class="text-center mb-15">
-        <h2 class="font-bold text-[65px] lg:text-[100px]">PRETTY COOL RIGHT?</h2>
-        <h3 class="font-semibold text-[30px] -mt-4 lg:[50]">where you can contact me</h3>
+        <h2 class="font-bold text-[50px] lg:text-[100px]">PRETTY COOL RIGHT?</h2>
+        <h3 class="font-semibold text-[30px] lg:[50]">where you can contact me</h3>
       </aside>
-      <div id="iconwrapper" class="m-auto mt-10 grid grid-cols-2 grid-rows-2 gap-y-15 lg:flex lg:flex-row lg:justify-between lg:w-200 lg:mt-20">
+      <div id="iconwrapper" class="w-80 m-auto mt-10 grid grid-cols-2 grid-rows-2 gap-y-15 md:flex md:flex-row md:justify-between md:w-200 md:mt-20">
         <div class="col-start-1 row-start-1 m-auto w-15 h-15 cursor-pointer transition duration-100 ease-in-out hover:scale-110">
           <a href="https://www.linkedin.com/in/christian-ditlevsen-670027387/" target="blank"><img src="/linkedinlogo.svg" alt="linkedin" /></a>
         </div>
