--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -33,7 +33,27 @@
         transform: translateY(-10px);    
       }  
     }
+
+
+--animate-herohover: herohover 0.7s ease-in-out forwards;
+
+ @keyframes herohover {  
+  0%, 100% {
+    font-variation-settings: "wght" 200, "wdth" 70;
+    letter-spacing: 0px;
+    
+  }  
+  
+  50% {
+    font-variation-settings: "wght" 700, "wdth" 70; 
+    letter-spacing: 1px;
+  
+  }
+
+ }
+
 }
+
 
 @layer base {
   *,
